<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/response"
        android:layout_width="349dp"
        android:layout_height="195dp"
        android:text="@string/response_field_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:contentDescription="@string/spinner_description"
        app:layout_constraintBottom_toTopOf="@+id/response"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apiKey"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/apiKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/api_key_field_hint"
        android:textColorHint="#757575"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_1"
        android:layout_width="205dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/placeholder"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toStartOf="@+id/text_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/text_2"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/placeholder"
        android:textColorHint="#757575"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_1"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="153dp"
        android:layout_height="138dp"
        android:layout_marginStart="250dp"
        android:contentDescription="@string/icon_description"
        app:layout_constraintBottom_toTopOf="@+id/response"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_2"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_description"
        app:layout_constraintBottom_toTopOf="@+id/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_2" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/city_name_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/coords"
        app:layout_constraintEnd_toStartOf="@+id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendButton" />

    <TextView
        android:id="@+id/weatherDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/weather_description_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/cloudness"
        app:layout_constraintEnd_toStartOf="@+id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coords" />

    <TextView
        android:id="@+id/coords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/coords_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/weatherDescription"
        app:layout_constraintEnd_toStartOf="@+id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <TextView
        android:id="@+id/temperatures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="156dp"
        android:text="@string/temperatures_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/pressure_humidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visibility" />

    <TextView
        android:id="@+id/pressure_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/pressure_humidity_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/sun_data"
        app:layout_constraintEnd_toStartOf="@+id/wind_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatures" />

    <TextView
        android:id="@+id/visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="10dp"
        android:text="@string/visibility_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/temperatures"
        app:layout_constraintEnd_toStartOf="@+id/cloudness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherDescription" />

    <TextView
        android:id="@+id/cloudness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cloudness_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/temperatures"
        app:layout_constraintEnd_toStartOf="@+id/image"
        app:layout_constraintStart_toEndOf="@+id/visibility"
        app:layout_constraintTop_toBottomOf="@+id/weatherDescription" />

    <TextView
        android:id="@+id/wind_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/wind_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/sun_data"
        app:layout_constraintEnd_toStartOf="@+id/image"
        app:layout_constraintStart_toEndOf="@+id/pressure_humidity"
        app:layout_constraintTop_toBottomOf="@+id/temperatures" />

    <TextView
        android:id="@+id/sun_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="27dp"
        android:text="@string/sun_data_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/response"
        app:layout_constraintEnd_toStartOf="@+id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressure_humidity" />

</androidx.constraintlayout.widget.ConstraintLayout>